main.css
:root {
  --background-color: #4a4a4a;
  --main-wraper-bg: #363636;

  --text-color: #fdfffc;
  /* --text-color: hsl(0, 0%, 100%); */
  --text-hover-color: hsl(180, 42%, 21%);

  /* --navbar-color: #1a9960; */
  --navbar-color: #1a9960;

  --accent-color: #ff6978;
}

/*is set to dark mode by default. Following is the style for light mode.*/
.lightmode {
  /*added to html once light mode is toggled.*/
  --background-color: hsl(0, 0%, 88%);
  --navbar-color: hsl(153, 72%, 35%);
  --main-wraper-bg: hsl(0, 0%, 64%);

  --text-color: hsl(0, 0%, 100%);
  --text-hover-color: hsl(180, 42%, 21%);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
/* element defaults */
img {
  max-width: 100%;
  max-height: 100%;
}
svg {
  all: unset;
}

a {
  color: var(--text-color);
  text-decoration: none;
}
ul li {
  list-style-type: none;
}
/*for inheritence*/
html {
  scroll-behavior: smooth;

  font-family: sans-serif;
  font-size: 0.9em;
  font-weight: bold;

  height: 100%;
  width: 100%;

  background-color: var(--background-color);

  transition: background-color 1s;
}

body {
  height: 200%; /* testing */
  display: flex;
  justify-content: center;
}

.main-wrapper {
  width: 75%;
  height: 100%;
  background-color: var(--main-wraper-bg);
  transition: background-color 1s;
  /* overflow: hidden; */
}

/*navbar stylings*/
.navbar {
  position: sticky;
  top: 0;
  display: flex;
  flex-wrap: nowrap;
  background-color: var(--navbar-color);
  min-height: 3ch;
}

.navbar__item {
  margin-left: 0.5ch; /*gaps between items*/
}

.navbar__icon {
  fill: var(--text-color);
  display: flex;
  width: 1.4em;
}
.navbar__home-container {
  border: 0;
  font-family: monospace;
  /* font-family: monospace; */
  font-size: 1.6em;

  text-align: center;
}
.navbar__home-container .fn {
  letter-spacing: 0.1ch; /*first name spacing*/
}
.navbar__home-container .ln {
  letter-spacing: 0.285ch; /*last name spacing*/
}

.navbar__parent-container {
  width: 100%;
  display: flex;

  margin: 0ch 20ch;

  justify-content: space-between;
  align-items: center;
}

.navbar__collapsible-container {
  order: 1;
  display: flex;
  height: 100%;
  align-items: center;
  margin-right: 1ch;
}
.navbar__mode-container {
  order: 2;
}

.navbar__home-container,
.navbar__items-container {
  display: flex;
  /* background-color: purple; */
}

.navbar__links-container,
.navbar__mode-container {
  /*centers and sizes logos with the text.*/
  max-height: 1.1em;
}
.navbar__links-container,
.navbar__links-container li,
.navbar__mode-container,
.navbar__mode-container li {
  display: flex;
  height: 100%;
  /* background-color: purple; */
}
/* .navbar__links-container li a {  
  background-color: green;
} */

/* .navbar__mode-container li button {
  background-color: green;
}
.navbar__mode-container li button svg {
  background-color: greenyellow;
} */

.navbar__vertical-seperator {
  margin-left: 1ch;
  border-left: 2px dotted var(--text-color);
  width: 0;
  height: 3ch;
}
.navbar__mode-container button {
  /* work with JS: light/dark change theme + logo. Burger opens nav for small screen and animates on click.*/

  width: 5ch; /*size of buttons, not the logos. Scaled buttons so they are around the same size as logos.*/
  height: 100%; /*THESE DO NOT AFFECT THE LOGOS THEMSELVES.*/

  cursor: pointer;

  background-color: transparent;
  border-color: transparent;

  /*centering logos to buttons*/
  display: flex;
  align-items: center;
  justify-content: center;
}

.navbar__home {
  white-space: nowrap; /*will not allow line breaks in name*/

  margin-left: 0ch; /*overwrites nav_bar gaps between items. First item does not need it.*/

  font-size: 1.1em;

  color: var(--text-color);
}

/*logos*/
.github {
  margin-left: 1.3ch;
  stroke-width: 0%;
  scale: 1.3;

  width: 2ch;
}
.itch {
  width: 2ch;
  margin-left: 1.3ch;
  scale: 1.3;
}

.moon {
  opacity: 1;
  display: none; /*moon initally invisible*/
  scale: 1.5;
  transition-property: fill stroke;
  transition-duration: 0.5s;
}
.sun {
  opacity: 1;
  scale: 1.75;
  transition-property: fill stroke;
}
.sun .st1 {
  /*inner circle*/
  stroke-width: 1px;
  stroke: var(--text-hover-color);
  transition-duration: 0.5s;
}
.sun .st0 {
  stroke-width: 1px;
  transition-duration: 0.5s;
}
.burger {
  scale: 1.7;

  stroke: var(--text-hover-color);
  fill: var(--text-color);
  stroke-width: 0px;
  transition-duration: 0.5s; /*for hovering only.*/
}
.navbar__mode-container .navbar__burger-button {
  /*using 2 identifiers to avoid getting over-writen by more specific identifiers above.*/

  /*seperate burger animation settings. Will animate the button itself instead of svg (want to keep hover animation on svg with 0.5 duration, but longer for for when rotating.)*/
  /*animation will take place in JS. by adding class ".js-navbar__burger-button" after it is clicked on.*/
  transition-property: transform fill stroke;
  transition-duration: 1s;
  transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);

  margin-left: 2ch;
  display: none;
}
/*animations/transitions*/
.navbar__item {
  transition-property: color fill stroke;
  transition-duration: 0.5s;
}
.bbottom {
  border-bottom: 0.1ch solid transparent; /*adds some height. Without this, border animation will push the item up on start.*/
  transition-property: color fill stroke border;
  transition-duration: 0.5s;
}

/*Hover and Focus-Visble Styles. Focus Visible allows hover styles to be applied for users who tab through elemenets in a better way than just using :focus (i.e., after clciking element, giving it focus, un-hovering will not keep the focus style there.)*/
.navbar__item:hover,
.navbar__item:focus-visible {
  color: var(--text-hover-color); /*for texts*/
  fill: var(--text-hover-color); /*for logos/svg*/

  outline-offset: 0.3ch;
}
.navbar__home:hover {
  color: var(--text-hover-color); /*for texts*/
}

/*for navbar that have a borderbottom on hover -> items*/
.bbottom:hover,
.bbottom:focus-visible {
  border-bottom: 0.1ch solid var(--text-hover-color);
  border-bottom-left-radius: 1ch;
  border-bottom-right-radius: 1ch;
}
/*for buttons: light/dark theme and mobile hamburger menu.*/
.navbar__color-mode-button:hover .st0,
.navbar__color-mode-button:hover .st1,
.navbar__color-mode-button:hover .moon,
.navbar__color-mode-button:focus-visible .st0,
.navbar__color-mode-button:focus-visible .st1,
.navbar__color-mode-button:focus-visible .moon {
  fill: var(--text-hover-color); /*for logos/svg*/
  stroke: var(--text-color);
}
.navbar__burger-button:hover .burger,
.navbar__burger-button:focus-visible .burger {
  fill: var(--text-color);
  stroke: var(--text-hover-color);
  stroke-width: 1px;
}

/* Burger Menu JS styles. Added onto burger menu once it is clicked on. Removed when menu is closed.*/
.js-navbar__burger-button {
  transform: rotate(-270deg);
}

/* max: applies if screen is SMALLER than a certain amount */

.navbar__vertical-name-seperator {
  display: none;
  align-self: center;
  border-left: 2px dotted var(--text-color);
  width: 0;
  height: 3.5ch;
}

/* Classes to for navbar mobile mode */
.navbar__mob-collapsible-container {
  display: none;

  margin: 0;
  position: absolute;
  right: 0;
  top: 5.5ch;

  flex-direction: column;
  align-items: center;

  background-color: var(--navbar-color);
  height: 11ch;
  width: 10ch;

  margin-right: 5ch;

  /* for class that is added after burger is clicked. */
  transform-origin: top right;
  transition-property: all;
  transition-duration: 0.5s;
  transition-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
  opacity: 1;
}
.navbar__mob-collapsible-container * {
  margin: 0;
}
.navbar__mob-vertical-seperator {
  border: none;
  border-bottom: 2px dotted var(--text-color);

  height: 0px;
  width: 75%;
  margin: 1ch 0;
}
.navbar__mob-items-container {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.navbar__mob-items-container li {
  margin: 0;
  margin-top: 0.5ch;
}
.navbar__mob-links-container {
  display: flex;
  justify-content: center;
  align-items: center;
}
.navbar__mob-links-container a {
  display: flex;
  justify-content: center;
  margin: 0 0.7ch;
}

@media (max-width: 1000px) {
  .navbar__parent-container {
    margin: 0 5ch;
  }
}
@media (max-width: 600px) {
  .navbar__vertical-name-seperator {
    display: inline-block;
  }
  .navbar__mode-container .navbar__burger-button {
    display: flex;
    margin-left: 0ch;
  }
  .sun {
    scale: 1.5;
  }
  .burger {
    scale: 1.25;
  }
  .moon {
    scale: 1.25;
  }

  .navbar__mob-collapsible-container {
    display: flex;
  }
  .navbar__collapsible-container {
    display: none;
  }
}
@media (min-width: 600px) {
  .navbar__mob-collapsible-container {
    display: none;
  }
}

@media (max-width: 350px) {
  .navbar__parent-container {
    margin: 0 1ch;
  }
  .navbar__mob-collapsible-container {
    margin: 0 0;
  }
  .navbar__mode-container button {
    width: 3ch;
    scale: 1;
  }
  .navbar__color-mode-button {
    margin-right: 1ch;
  }
}

.js-navbar__collapsible-container {
  /*also in place on page load*/
  /*will be added when closed*/

  transition-duration: 0.7s;

  /* transform: rotateZ(180deg) translateY(7ch); */
  opacity: 0;
  scale: 0;
  /*without scale, overflows horizontally for a moment if transforming off screen.*/

  /* transform: skewY(-90deg); */
  /* transform: skew(-90deg); */
}

.js-navbab__itch-github-raise {
  /*also in place on page load*/
  /*added after opening.*/

  transition: fill stroke scale 0.5s;

  /* opacity: 1; */
  fill: transparent;
  stroke: transparent;
  scale: 0;
}
.js-navbab__itch-github-collapse {
  /*added after opening.*/
  transition: fill stroke scale 0.3s;
  transition-delay: 0.3s; /*want to remove transition delay after transition is over.*/

  scale: 1.3;
}
.js-navbab__itch-github-raised {
  /*added after transition is over.*/
  transition-delay: 0s;
}

.js-navbar__disable-links {
  pointer-events: none;
}

